change jQuery CDN

--- a/cafe.html
+++ b/cafe.html
@@ -5,12 +5,10 @@
 		<meta name="keyword" content="cafe, coffee" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>With love to coffee</title>
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-	<body>		
-		<div class="loader">	
-		</div>
+	<body>
 		<div class="container">
 		<!--------------------------------HEADER-------------------------------->
 		<header>
