--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>With love to coffee</title>
 		<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="./css/main.css" />
+		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
 		<div class="container">
