add loading sign

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
+		<div id="loadingSign" class="spinningCirclesContainer">
+			<div id="largeCircle">
+				<div id="mediumCircle">
+					<div id="smallCircle"></div>
+				</div>
+			</div>
+		</div>
 		<div class="container">
 		<!--------------------------------HEADER-------------------------------->
 		<header>
